--- a/src/components/generalComponents/StoryPreview.css
+++ b/src/components/generalComponents/StoryPreview.css
@@ -4,6 +4,7 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 2px;
   text-decoration: none;
+  position: relative;
 }
 .story-wrapper .story-image {
   width: 100%;
@@ -36,12 +37,21 @@
   margin-bottom: 8px;
 }
 .story-wrapper .story-detail header span {
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 95%;
   color: #0d0d0d;
   background-color: #ededed;
   border-radius: 2px;
   padding: 1px 5px;
+  display: inline-block;
+  max-width: 30%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow-x: hidden;
+}
+.story-wrapper .story-detail header .story-more {
+  position: absolute;
+  right: 2%;
 }
 .story-wrapper .story-detail p:not(.story-title) {
   font-size: 14px;
@@ -53,4 +63,35 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow-x: hidden;
+}
+.story-wrapper .operations-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.story-wrapper.open .operations-overlay {
+  display: flex;
+}
+.story-operation {
+  display: flex;
+  flex-direction: column;
+}
+.story-operation:not(:last-child) {
+  margin-right: 2rem;
+}
+
+@media (max-width: 480px) {
+  .story-wrapper .operations-overlay {
+    flex-direction: column;
+  }
+  .story-operation:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 2rem;
+  }
 }
