--- a/src/components/HelpPage.css
+++ b/src/components/HelpPage.css
@@ -7,7 +7,7 @@
   padding-left: 3rem;
   margin-left: 250px;
   padding-right: 5.5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
 }
 
 #help-background {
@@ -107,5 +107,6 @@
 @media (max-width: 870px) {
   .help-topic {
     margin-left: 0;
+    padding-top: 10rem;
   }
 }
