--- a/src/components/aboutComponents/AboutInfo.css
+++ b/src/components/aboutComponents/AboutInfo.css
@@ -39,3 +39,101 @@ section#about a {
     font-size: 15px;
   }
 }
+
+.wrapper{
+  margin-top: 60px;
+  text-align: center;
+}
+
+.our_team{
+  width: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.our_team .team_member{
+  width: 250px;
+  margin: 5px;
+  background: #000000;
+  padding: 20px 10px;
+}
+
+.our_team .team_member .member_img{
+  background: #287088;
+  max-width: 190px;
+  width: 100%;
+  height: 190px;
+  margin: 0 auto;
+  border-radius: 50%;
+  padding: 5px;
+  position: relative;
+  cursor: pointer;
+}
+
+.our_team .team_member .member_img img{
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.our_team .team_member h3{
+  font-size: 20px;
+  font-weight: bold;
+  color: #287088;
+  margin-top: 12px;
+  margin-bottom: 8px;
+  border-bottom: 3px solid #287088;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 10px;
+  line-height: normal;
+}
+
+.our_team .team_member span{
+  font-size: 16px;
+  font-weight: bold;
+  line-height: normal;
+  color: white;
+}
+
+.our_team .team_member p{
+  font-size: 16px;
+  line-height: normal;
+  margin: 15px 0;
+  color: white;
+
+}
+
+.our_team .team_member .member_img .social_media{
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background: rgba(0,0,0,0.65);
+  width: 95%;
+  height: 95%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0);
+   transition: all 0.5s ease;
+}
+
+.our_team .team_member .member_img .social_media .item{
+  margin: 0 10px;
+}
+
+.our_team .team_member .member_img .social_media .fab{
+  color: #8c7ae6;
+  font-size: 20px;
+}
+
+.our_team .team_member .member_img:hover .social_media{
+  transform: scale(1);
+}
+
+.team-type{
+  display: table-column-group;
+}
