--- a/src/components/landingComponents/ExploreScreen.css
+++ b/src/components/landingComponents/ExploreScreen.css
@@ -11,7 +11,7 @@
     #0d0d0d 250px,
     transparent
   );
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 #explore-header {
   opacity: 0;
@@ -29,7 +29,7 @@
   align-items: center;
   margin-top: 0;
   background-color: transparent;
-  height: 100px;
+  height: 250px;
 }
 .spinner-explore {
   border: 3px solid #575757;
@@ -53,7 +53,7 @@
   #explore-screen {
     display: flex;
     flex-direction: column;
-    padding-bottom: 200px;
+    padding-bottom: 0;
   }
   #explore-header {
     margin-bottom: 2rem;
