--- a/src/components/mapsComponents/HelpBtn.css
+++ b/src/components/mapsComponents/HelpBtn.css
@@ -32,7 +32,8 @@
 
 .help-content {
     min-height: 300px;
-    width: 50%;
+    overflow-y: auto;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -64,15 +65,16 @@
     margin: 1rem;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 812px) {
     .help-content-container {
         padding: 0;
     }
     .help-content {
         height: 100%;
+        max-width: 100vw;
         width: 100%;
         box-shadow: none;
-        overflow: scroll;
+        justify-content: start;
     }
     .help-content .close-btn {
         position: relative;
