--- a/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
+++ b/src/components/storiesComponents/sidebarComponents/AdvancedSearch.css
@@ -4,7 +4,6 @@
   border: 0.5px solid rgba(201, 201, 201, 0.5);
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.3);
-  /* height: 63vh; */
   height: min-content;
   overflow-y: visible;
   z-index: 99;
@@ -35,6 +34,12 @@
   border-radius: 3px;
   color: rgba(255, 255, 255, 0.85);
   cursor: pointer;
+}
+
+#apply-filters:disabled {
+  background-color: #d9d9d9;
+  color: #a1a1a1;
+  cursor: auto;
 }
 
 #apply-filters:hover {
