--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -31,7 +31,7 @@
 .recent-stories {
   color: #bababa;
   font-weight: 500;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   font-size: 30px;
 }
 
@@ -81,6 +81,7 @@
   color: white;
   font-size: 0.85rem;
   margin-top: 0.85rem;
+  margin-bottom: 20px;
 }
 
 .story-info a {
@@ -332,7 +333,8 @@
 
 .result-term {
   color: #d9d9d9;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  margin-bottom: 15px;
 }
 
 #search-term {
