--- a/src/components/storiesComponents/sidebarComponents/FilterFieldContainer.css
+++ b/src/components/storiesComponents/sidebarComponents/FilterFieldContainer.css
@@ -1,6 +1,6 @@
 #filter-container {
   margin-left: 10px;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   margin-top: 0;
   padding: 0.7rem 1rem;
   padding-bottom: 0;
