--- a/src/components/Stories.css
+++ b/src/components/Stories.css
@@ -26,6 +26,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  position: relative;
 }
 
 .recent-stories {
@@ -39,7 +40,10 @@
   display: none;
   color: #d9d9d9;
   cursor: pointer;
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  position: absolute;
+  top: 3px;
+  right: 0;
 }
 
 .click-filter:hover {
@@ -63,8 +67,7 @@
 
 .no-found-msg {
   color: white;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 #direct-to-google-search {
@@ -78,7 +81,7 @@
 }
 
 .story-info {
-  color: white;
+  color: rgba(255, 255, 255, 0.7);
   font-size: 0.85rem;
   margin-top: 0.85rem;
   margin-bottom: 20px;
@@ -472,6 +475,8 @@
 @media (max-width: 950px) {
   .stories-grid {
     display: block;
+    padding-left: 2rem;
+    padding-right: 1.5rem;
   }
   .main-stories {
     z-index: 99;
@@ -500,11 +505,5 @@
   }
   .comment-font-mobile {
     font-size: 12px;
-  }
-}
-
-@media (max-width: 500px) {
-  .hHQVDB {
-    font-size: 10px;
   }
 }
