--- a/src/components/generalComponents/StoryPreview.profile.css
+++ b/src/components/generalComponents/StoryPreview.profile.css
@@ -16,6 +16,11 @@
 .profile-story-wrapper .story-detail article p:not(:last-child) {
   margin-bottom: 10px;
 }
+.profile-story-wrapper .story-title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
 .profile-story-wrapper .story-detail .story-description {
   max-height: 3.6rem;
   background: linear-gradient(
