add help links to pages and improve tooltip by adding direction prop

--- a/src/components/generalComponents/Tooltip.css
+++ b/src/components/generalComponents/Tooltip.css
@@ -45,6 +45,18 @@
   visibility: visible;
   opacity: 1;
 }
+.tooltip.below .tooltip-text {
+  transform: translate(-50%, 30px);
+  max-width: 240px;
+}
+.tooltip.below .tooltip-text::after {
+  top: -16px;
+  left: calc(50%);
+  border-color: transparent transparent rgba(255, 255, 255, 0.9) transparent;
+}
+.tooltip.below .tooltip-text.dark::after {
+  border-color: transparent transparent rgba(0, 0, 0, 0.9) transparent;
+}
 
 @media (max-width: 768px) {
   .tooltip-text {
